--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Please refer to Helm’s <a href="https://helm.sh/docs/">documentation</a> to ge
 <p>You can then run <code class="language-plaintext highlighter-rouge">helm search repo metrico</code> to see the charts.</p>
 
 <!-- Keep full URL links to repo files because this README syncs from main to gh-pages.  -->
-<p>Chart documentation is available at <a href="https://qryn.dev">qryn.devy</a>.</p>
+<p>Chart documentation is available at <a href="https://qryn.dev">qryn.dev</a>.</p>
 
 <h2 id="license">License</h2>
 
